Homeviewcontroller has been added

--- a/GadgetsStore/GadgetsStore/View/Base.lproj/Main.storyboard
+++ b/GadgetsStore/GadgetsStore/View/Base.lproj/Main.storyboard
@@ -3,41 +3,48 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Table View Controller-->
+        <!--Home Page View Controller-->
         <scene sceneID="UJJ-g3-RmG">
             <objects>
-                <tableViewController id="m4j-71-K8d" sceneMemberID="viewController">
+                <tableViewController id="m4j-71-K8d" customClass="HomePageViewController" customModule="GadgetsStore" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="x38-ww-FvG">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="movieCell" rowHeight="80" id="AJm-Gg-pgf" userLabel="gadgetsCell" customClass="GadgetsTableViewCell" customModule="GadgetsStore" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="24.5" width="414" height="80"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="gadgetCell" id="AJm-Gg-pgf" userLabel="gadgetsCell" customClass="GadgetsTableViewCell" customModule="GadgetsStore" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="24.5" width="414" height="92"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="AJm-Gg-pgf" id="J2u-s3-81r">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="80"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="92"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="jurassic.png" translatesAutoresizingMaskIntoConstraints="NO" id="hka-ei-MNf" userLabel="Gadgets Image View">
-                                            <rect key="frame" x="8" y="5" width="60" height="70"/>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="jurassic.png" translatesAutoresizingMaskIntoConstraints="NO" id="hka-ei-MNf" userLabel="Gadget Image View">
+                                            <rect key="frame" x="8" y="5" width="60" height="82"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="60" id="maH-Cc-1XX"/>
                                             </constraints>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Movie Name" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X41-Tn-cM6" userLabel="Gadget Title Label">
-                                            <rect key="frame" x="76" y="5" width="330" height="24"/>
-                                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="752" text="Movie Name" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X41-Tn-cM6" userLabel="Gadget Title Label">
+                                            <rect key="frame" x="76" y="5" width="330" height="19.5"/>
+                                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
                                             <color key="textColor" systemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2b2-CM-fWY" userLabel="Gadget Price Label">
-                                            <rect key="frame" x="83" y="39" width="311" height="17"/>
-                                            <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Price:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2b2-CM-fWY" userLabel="Gadget Price Label">
+                                            <rect key="frame" x="83" y="34.5" width="311" height="18"/>
+                                            <fontDescription key="fontDescription" type="system" weight="light" pointSize="15"/>
+                                            <color key="textColor" systemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Price:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hcc-Lq-duT" userLabel="Gadget Rating Label">
+                                            <rect key="frame" x="83" y="55.5" width="38.5" height="18.5"/>
+                                            <fontDescription key="fontDescription" type="system" weight="light" pointSize="15"/>
                                             <color key="textColor" systemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
@@ -45,10 +52,13 @@
                                     <constraints>
                                         <constraint firstAttribute="trailingMargin" secondItem="2b2-CM-fWY" secondAttribute="trailing" id="6wH-qj-Wmu"/>
                                         <constraint firstAttribute="trailing" secondItem="X41-Tn-cM6" secondAttribute="trailing" constant="8" id="CHq-4v-Qgl"/>
+                                        <constraint firstItem="Hcc-Lq-duT" firstAttribute="leading" secondItem="hka-ei-MNf" secondAttribute="trailing" constant="15" id="Enj-iw-rkw"/>
                                         <constraint firstItem="X41-Tn-cM6" firstAttribute="top" secondItem="hka-ei-MNf" secondAttribute="top" id="IGd-Q6-gqn"/>
                                         <constraint firstItem="hka-ei-MNf" firstAttribute="leading" secondItem="J2u-s3-81r" secondAttribute="leading" constant="8" id="KJT-JW-igq"/>
                                         <constraint firstAttribute="bottom" secondItem="hka-ei-MNf" secondAttribute="bottom" constant="5" id="MCc-ld-ppa"/>
+                                        <constraint firstItem="Hcc-Lq-duT" firstAttribute="top" secondItem="2b2-CM-fWY" secondAttribute="bottom" constant="3" id="VQY-zK-lPZ"/>
                                         <constraint firstItem="hka-ei-MNf" firstAttribute="top" secondItem="J2u-s3-81r" secondAttribute="top" constant="5" id="XBO-Mm-u48"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="Hcc-Lq-duT" secondAttribute="bottom" constant="7" id="bBf-qg-XBe"/>
                                         <constraint firstItem="X41-Tn-cM6" firstAttribute="leading" secondItem="hka-ei-MNf" secondAttribute="trailing" constant="8" id="df1-ud-COM"/>
                                         <constraint firstItem="2b2-CM-fWY" firstAttribute="top" secondItem="X41-Tn-cM6" secondAttribute="bottom" constant="10" id="iVc-5C-mG2"/>
                                         <constraint firstItem="2b2-CM-fWY" firstAttribute="leading" secondItem="hka-ei-MNf" secondAttribute="trailing" constant="15" id="lef-Oi-786"/>
@@ -57,7 +67,9 @@
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="gadgetImageView" destination="hka-ei-MNf" id="W16-vv-OHS"/>
-                                    <outlet property="gadgetName" destination="X41-Tn-cM6" id="iHI-ws-0aS"/>
+                                    <outlet property="gadgetNameLabel" destination="X41-Tn-cM6" id="iHI-ws-0aS"/>
+                                    <outlet property="gadgetPriceLabel" destination="2b2-CM-fWY" id="ozk-mk-iau"/>
+                                    <outlet property="ratingLabel" destination="Hcc-Lq-duT" id="2w3-OY-l1U"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -71,6 +83,21 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gtm-Ju-4OL" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="852" y="94"/>
+        </scene>
+        <!--Checkout View Controller-->
+        <scene sceneID="jUu-lX-GOb">
+            <objects>
+                <viewController restorationIdentifier="checkoutVC" storyboardIdentifier="checkoutVC" id="LhY-mB-bbD" customClass="CheckoutViewController" customModule="GadgetsStore" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="2V1-Wy-yAJ">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="8sP-Bq-OKi"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8hq-hN-hef" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1675" y="88"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="OhJ-Am-Abn">
