--- a/GadgetsStore/GadgetsStore/View/Base.lproj/Main.storyboard
+++ b/GadgetsStore/GadgetsStore/View/Base.lproj/Main.storyboard
@@ -12,10 +12,9 @@
         <scene sceneID="UJJ-g3-RmG">
             <objects>
                 <tableViewController id="m4j-71-K8d" customClass="HomePageViewController" customModule="GadgetsStore" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="x38-ww-FvG">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="x38-ww-FvG">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="gadgetCell" id="AJm-Gg-pgf" userLabel="gadgetsCell" customClass="GadgetsTableViewCell" customModule="GadgetsStore" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="24.5" width="414" height="92"/>
@@ -166,7 +165,7 @@
                                 <rect key="frame" x="0.0" y="54" width="414" height="708"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="gadgetCell" id="sR4-wg-jlk" userLabel="gadgetsCell" customClass="GadgetsTableViewCell" customModule="GadgetsStore" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cartGadgetCell" id="sR4-wg-jlk" userLabel="gadgetsCell" customClass="GadgetsTableViewCell" customModule="GadgetsStore" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="24.5" width="414" height="92"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="sR4-wg-jlk" id="Lcx-iN-7H9">
@@ -201,8 +200,11 @@
                                                     <rect key="frame" x="351" y="57.5" width="61" height="34.5"/>
                                                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
                                                     <state key="normal" title="Remove">
-                                                        <color key="titleColor" red="0.039215686270000001" green="0.61176470589999998" blue="0.50980392159999999" alpha="1" colorSpace="calibratedRGB"/>
+                                                        <color key="titleColor" systemColor="systemRedColor"/>
                                                     </state>
+                                                    <connections>
+                                                        <action selector="addToCartButtonAction:" destination="sR4-wg-jlk" eventType="touchUpInside" id="Rqk-Zf-Nn5"/>
+                                                    </connections>
                                                 </button>
                                                 <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0H1-Rs-Yxe">
                                                     <rect key="frame" x="135.5" y="60" width="10" height="10"/>
@@ -274,14 +276,33 @@
                                                 <constraint firstAttribute="bottomMargin" secondItem="8PB-dk-C2t" secondAttribute="bottom" constant="7" id="yHC-r4-dtO"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="addToCartButton" destination="bRk-iO-yEv" id="1c1-hN-iMl"/>
+                                            <outlet property="fifthRatingStar" destination="ciJ-L3-Ql7" id="u3t-OY-42h"/>
+                                            <outlet property="firstRatingStar" destination="0H1-Rs-Yxe" id="kX5-CR-QE7"/>
+                                            <outlet property="forthRatingStar" destination="yzP-KW-Y3W" id="LcS-Ok-9LG"/>
+                                            <outlet property="gadgetImageView" destination="ovA-7z-crF" id="rPJ-Zh-y11"/>
+                                            <outlet property="gadgetNameLabel" destination="uJ9-Yo-Hcq" id="VEg-02-k5s"/>
+                                            <outlet property="gadgetPriceLabel" destination="bFM-eC-y5N" id="4Kr-Br-m7K"/>
+                                            <outlet property="ratingLabel" destination="8PB-dk-C2t" id="rnd-hC-4ti"/>
+                                            <outlet property="secondRatingStar" destination="WSX-T0-4TC" id="9XW-Od-Hbw"/>
+                                            <outlet property="thirdRatingStar" destination="3Zh-gd-OfZ" id="qIO-uy-TkS"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="LhY-mB-bbD" id="v1f-mw-C3g"/>
+                                    <outlet property="delegate" destination="LhY-mB-bbD" id="UkS-Az-SBQ"/>
+                                </connections>
                             </tableView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GVo-58-p9E">
-                                <rect key="frame" x="100" y="792" width="214" height="30"/>
-                                <state key="normal" title="CheckOut"/>
+                                <rect key="frame" x="100" y="792" width="214" height="36"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
+                                <state key="normal" title="CheckOut">
+                                    <color key="titleColor" systemColor="labelColor"/>
+                                </state>
                                 <connections>
-                                    <segue destination="AAG-Xh-568" kind="push" id="LRz-7k-sKr"/>
+                                    <action selector="checkOutAction:" destination="LhY-mB-bbD" eventType="touchUpInside" id="A4z-4Z-GFg"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -297,6 +318,9 @@
                             <constraint firstItem="8sP-Bq-OKi" firstAttribute="trailing" secondItem="Hm8-s6-dIC" secondAttribute="trailing" id="vwa-PJ-I6U"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="cartTableView" destination="Hm8-s6-dIC" id="LSS-Ma-iuh"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8hq-hN-hef" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -305,34 +329,39 @@
         <!--Checkout View Controller-->
         <scene sceneID="fTS-36-Zkh">
             <objects>
-                <viewController id="AAG-Xh-568" customClass="CheckoutViewController" customModule="GadgetsStore" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="checkoutVC" useStoryboardIdentifierAsRestorationIdentifier="YES" id="AAG-Xh-568" customClass="CheckoutViewController" customModule="GadgetsStore" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="0Vh-yK-g9h">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0h3-kS-B9K">
-                                <rect key="frame" x="186" y="410.5" width="42" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your order has been placed" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0h3-kS-B9K">
+                                <rect key="frame" x="82.5" y="435.5" width="249.5" height="25.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
+                                <color key="textColor" systemColor="systemTealColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yfg-nw-RsL">
-                                <rect key="frame" x="100" y="461.5" width="42" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="congratulations" translatesAutoresizingMaskIntoConstraints="NO" id="qMf-LN-u1a">
+                                <rect key="frame" x="100" y="294" width="214" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="9Q5-bA-rDP"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="cWc-yl-OBI"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="qMf-LN-u1a" firstAttribute="leading" secondItem="cWc-yl-OBI" secondAttribute="leading" constant="100" id="0EU-a8-vCg"/>
+                            <constraint firstItem="qMf-LN-u1a" firstAttribute="top" secondItem="cWc-yl-OBI" secondAttribute="top" constant="250" id="DtL-qg-APG"/>
                             <constraint firstItem="0h3-kS-B9K" firstAttribute="centerX" secondItem="0Vh-yK-g9h" secondAttribute="centerX" id="F3q-DN-n0q"/>
                             <constraint firstItem="0h3-kS-B9K" firstAttribute="centerY" secondItem="0Vh-yK-g9h" secondAttribute="centerY" id="PqA-KF-n8y"/>
-                            <constraint firstItem="Yfg-nw-RsL" firstAttribute="top" secondItem="0h3-kS-B9K" secondAttribute="bottom" constant="30" id="ohl-2u-9Cc"/>
-                            <constraint firstItem="Yfg-nw-RsL" firstAttribute="leading" secondItem="cWc-yl-OBI" secondAttribute="leading" constant="100" id="zIl-pL-Yap"/>
+                            <constraint firstItem="qMf-LN-u1a" firstAttribute="centerX" secondItem="0Vh-yK-g9h" secondAttribute="centerX" id="fmS-9h-j7X"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="rHn-83-05Y"/>
+                    <connections>
+                        <outlet property="congratsImageView" destination="qMf-LN-u1a" id="vIs-4L-q2j"/>
+                        <outlet property="orderInfoLabel" destination="0h3-kS-B9K" id="blZ-VR-Ixs"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MM3-oB-fwm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -346,6 +375,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="ZQp-92-Weu">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.52941176470588236" green="0.80784313725490198" blue="0.98039215686274506" alpha="0.80445394710618623" colorSpace="custom" customColorSpace="calibratedRGB"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -358,12 +388,22 @@
         </scene>
     </scenes>
     <resources>
+        <image name="congratulations" width="512" height="103"/>
         <image name="yellowstar" width="128" height="128"/>
         <systemColor name="darkTextColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemTealColor">
+            <color red="0.35294117647058826" green="0.78431372549019607" blue="0.98039215686274506" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
